# simdeval

./: Cargo.toml
src/: error.rs  lib.rs  small_string.rs  stack.rs  tests.rs
src/evaluate/: enums.rs  expression.rs  mod.rs  node.rs  parse_element.rs  token.rs  variables.rs
src/evaluate/function/: function_macro.rs  macros.rs  mod.rs  std.rs
src/evaluate/value/: mod.rs  simd.rs  single.rs
src/lex/: mod.rs  token.rs  token_stream.rs  tokens.rs
src/parse/: mod.rs  node.rs  nodes.rs
src/parse_new/: enums.rs  expression.rs  function.rs  mod.rs  node.rs  parse_element.rs  parse_elements.rs  std.rs
src/parser/: mod.rs  partial_token.rs  partial_token_stream.rs  token.rs  token_stream.rs
