[package]
name = "simdeval"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
fasteval = "0.2.4"

[build]

[profile.bench]
# rustflags = "-C target-cpu=native"
opt-level = 3
lto = true
# codegen-units = 1

[profile.test]
opt-level = 3

# lto = true
# codegen-units = 1